2010-07-07  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* configure.host: Updated for OpenRISC to use namespace clean
	functions.

2008-12-19  Jeff Johnston  <jjohnstn@redhat.com>

	* NEWS: Update with 1.17.0 info.
	* README: Ditto.
	* acinclude.m4: Change version number to 1.17.0.
	* aclocal.m4: Regenerated.
	* configure: Ditto.
	* doc/aclocal.m4: Ditto.
	* doc/configure: Ditto.
	* libc/*/aclocal.m4: Ditto.
	* libc/*/configure: Ditto.
	* libc/libc.texinfo: Ditto.
	* libm/*/aclocal.m4: Ditto.
	* libm/*/configure: Ditto.
	* libm/libm.texinfo: Ditto.
	* libc/sys/linux/shared.ld: Add VERS_1.17

2008-12-17  Jon Beniston <jon@beniston.com>

	* configure.host: Set syscall_dir for lm32 target.

2008-12-15  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/stdio.tex: Remove putwc and getwc references as they
	are included as part of fputwc and fgetwc, respectively.

2008-12-12  Craig Howland <howland@LGSInnovations.com>

	* libc/include/wchar.h:  Added wcstok() declaration.
	* libc/string/wcstok.c: New file, implementing wcstok.
	* libc/string/Makefile.am: Add wcstok support.
	* libc/string/wcstrings.tex: Ditto.
	* libc/string/Makefile.in: Regenerated.

2008-12-12  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* libc/stdio/fputws.c: Fix documentation.
	* libc/stdio/getwchar.c: Ditto.
	* libc/stdio/putwchar.c: Ditto.

2008-12-12  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* libc/include/sys/features.h: Set RTEMS's _POSIX_MONOTONIC_CLOCK to
	200112L (SUSv3 compliance).
	Comment out RTEMS's _POSIX_SHARED_MEMORY_OBJECTS (Unsupported).

2008-12-12  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* libc/sys/rtems/crt0.c: Add stubs for getdents(), nanosleep(), 
	_execve(), _exit().

2008-12-12  Ralf Corsepius  <ralf.corsepius@rtems.org>

	* configure.host: Let *rtems* default to c99-formats.

2008-12-12  Craig Howland  <howland@LGSInnovations.com>

	* libc/stdio/freopen.c:  Add <string.h> for memset prototype.
	* libc/stdio/fseek.c:  Ditto.